stdouts/codo-theme-sm
/root/Targets/codo-theme-sm
└─┬ codo-theme-sm@0.0.8 
  ├─┬ codo@2.1.2 
  │ ├─┬ async@2.5.0 
  │ │ └── lodash@4.17.4 
  │ ├─┬ cli-table@0.2.0 
  │ │ └── colors@0.3.0 
  │ ├── colors@1.1.2 
  │ ├─┬ connect@3.6.4 
  │ │ ├─┬ finalhandler@1.0.5 
  │ │ │ ├── encodeurl@1.0.1 
  │ │ │ ├── escape-html@1.0.3 
  │ │ │ ├─┬ on-finished@2.3.0 
  │ │ │ │ └── ee-first@1.1.1 
  │ │ │ ├── statuses@1.3.1 
  │ │ │ └── unpipe@1.0.0 
  │ │ ├── parseurl@1.3.2 
  │ │ └── utils-merge@1.0.1 
  │ ├── marked@0.3.6 
  │ ├─┬ mincer@0.5.13 
  │ │ ├─┬ argparse@0.1.16 
  │ │ │ ├── underscore@1.7.0 
  │ │ │ └── underscore.string@2.4.0 
  │ │ ├── async@0.2.10 
  │ │ ├─┬ fs-tools@0.2.11 
  │ │ │ ├── async@0.2.10 
  │ │ │ └── lodash@2.4.2 
  │ │ ├─┬ hike@0.1.4 
  │ │ │ └── lodash@2.4.2 
  │ │ ├── lodash@2.4.2 
  │ │ └── mimoza@0.3.0 
  │ ├─┬ nib@1.0.4 
  │ │ └─┬ stylus@0.45.1 
  │ │   ├─┬ glob@3.2.11 
  │ │   │ └─┬ minimatch@0.3.0 
  │ │   │   ├── lru-cache@2.7.3 
  │ │   │   └── sigmund@1.0.1 
  │ │   └── mkdirp@0.3.5 
  │ ├─┬ optimist@0.6.1 
  │ │ ├── minimist@0.0.10 
  │ │ └── wordwrap@0.0.3 
  │ ├── strftime@0.6.2 
  │ ├─┬ stylus@0.38.0 
  │ │ ├── cssom@0.2.5 
  │ │ └── mkdirp@0.3.5 
  │ ├─┬ underscore.string@3.3.4 
  │ │ ├── sprintf-js@1.1.1 
  │ │ └── util-deprecate@1.0.2 
  │ └─┬ winston@0.7.3 
  │   ├── async@0.2.10 
  │   ├── colors@0.6.2 
  │   ├── cycle@1.0.3 
  │   ├── eyes@0.1.8 
  │   ├── pkginfo@0.3.1 
  │   ├─┬ request@2.16.6 
  │   │ ├── aws-sign@0.2.0 
  │   │ ├── cookie-jar@0.2.0 
  │   │ ├── forever-agent@0.2.0 
  │   │ ├─┬ form-data@0.0.10 
  │   │ │ ├── async@0.2.10 
  │   │ │ └─┬ combined-stream@0.0.7 
  │   │ │   └── delayed-stream@0.0.5 
  │   │ ├─┬ hawk@0.10.2 
  │   │ │ ├── boom@0.3.8 
  │   │ │ ├── cryptiles@0.1.3 
  │   │ │ ├── hoek@0.7.6 
  │   │ │ └── sntp@0.1.4 
  │   │ ├── json-stringify-safe@3.0.0 
  │   │ ├── mime@1.2.11 
  │   │ ├── node-uuid@1.4.8 
  │   │ ├── oauth-sign@0.2.0 
  │   │ ├── qs@0.5.6 
  │   │ └── tunnel-agent@0.2.0 
  │   └── stack-trace@0.0.10 
  ├── coffee-script@1.12.7 
  ├── haml-coffee@1.14.1 
  ├─┬ mincer@1.5.1 
  │ ├─┬ argparse@1.0.9 
  │ │ └── sprintf-js@1.0.3 
  │ ├─┬ compressible@2.0.11 
  │ │ └── mime-db@1.30.0 
  │ ├── hike@1.0.2 
  │ ├── lodash@3.10.1 
  │ ├── mimoza@1.0.0 
  │ ├── pako@1.0.6 
  │ ├── shellwords@0.1.1 
  │ └── source-map@0.5.7 
  ├─┬ mkdirp@0.5.1 
  │ └── minimist@0.0.8 
  ├── nib@1.1.2 
  ├── strftime@0.9.2 
  ├─┬ stylus@0.54.5 
  │ ├── css-parse@1.7.0 
  │ ├─┬ debug@2.6.8 
  │ │ └── ms@2.0.0 
  │ ├─┬ glob@7.0.6 
  │ │ ├── fs.realpath@1.0.0 
  │ │ ├─┬ inflight@1.0.6 
  │ │ │ └── wrappy@1.0.2 
  │ │ ├── inherits@2.0.3 
  │ │ ├─┬ minimatch@3.0.4 
  │ │ │ └─┬ brace-expansion@1.1.8 
  │ │ │   ├── balanced-match@1.0.0 
  │ │ │   └── concat-map@0.0.1 
  │ │ ├── once@1.4.0 
  │ │ └── path-is-absolute@1.0.1 
  │ ├── sax@0.5.8 
  │ └─┬ source-map@0.1.43 
  │   └── amdefine@1.0.1 
  ├── underscore@1.8.3 
  └── walkdir@0.0.11 

Setup Done exists, not setting up
:../FeatureTester/libs/:/root/Targets/codo-theme-sm/node_modules
Set Default Z3_PATH to ./node_modules/z3javascript/bin/libz3.so
ExpoSE Master: /root/ExpoSE/lib/Harness/src/harness.js max concurrent: 16 max paths: 1000000
Setting timeout to 900000
*** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [1 done /0 queued / 0 running / 1 errors / 86% coverage ] ***
*-- Stat Module Output --*
*-- concretizations: ["defineProperty","bound log","call","join","charCodeAt","RegExp","apply","lastIndexOf","toUpperCase","pop","splice","parseFloat","create","reverse","SyntaxError"]
*-- Stat Module Done --*
*-- Test Case {"_bound":0} start 0.0708 took 166.5675s
*-- Errors occured in test {"_bound":0}
* Error: /root/Targets/codo-theme-sm/node_modules/codo-theme-sm/lib/theme.coffee:19:3: error: invalid object key
  @compile: (environment) ->
  ^^^^^^^^
*-- Replay with NO_COMPILE=1 expoSE replay '/root/ExpoSE/lib/Harness/src/harness.js' '{"_bound":0}'
*-- Coverage Data
*- File /root/ExpoSE/lib/Harness/src/harness.js. Coverage (Term): 18% Coverage (LOC): 24%
*- File /root/ExpoSE/lib/S$/bin/symbols.js. Coverage (Term): 16% Coverage (LOC): 34%
*- File /root/Targets/codo-theme-sm/node_modules/codo-theme-sm/index.js. Coverage (Term): 83% Coverage (LOC): 100%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/register.js. Coverage (Term): 94% Coverage (LOC): 100%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/register.js. Coverage (Term): 74% Coverage (LOC): 75%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/coffee-script.js. Coverage (Term): 30% Coverage (LOC): 34%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/lexer.js. Coverage (Term): 70% Coverage (LOC): 78%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/rewriter.js. Coverage (Term): 87% Coverage (LOC): 90%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/helpers.js. Coverage (Term): 58% Coverage (LOC): 65%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/parser.js. Coverage (Term): 84% Coverage (LOC): 98%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/sourcemap.js. Coverage (Term): 18% Coverage (LOC): 22%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/nodes.js. Coverage (Term): 37% Coverage (LOC): 49%
*- File /root/Targets/codo-theme-sm/node_modules/coffee-script/lib/coffee-script/scope.js. Coverage (Term): 39% Coverage (LOC): 50%
*- Re-run with EXPOSE_PRINT_COVERAGE=1 to print line by line coverage information
** ExpoSE Finished. 1 paths with 1 errors **
